gen/com/tang/intellij/lua/parser/LuaParser.java
// This is a generated file. Not intended for manual editing.
package com.tang.intellij.lua.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.tang.intellij.lua.psi.LuaTypes.*;
import static com.tang.intellij.lua.psi.LuaParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static com.intellij.lang.WhitespacesBinders.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LuaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return luaFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(EXPR_LIST, VAR_LIST),
    create_token_set_(NAME_DEF, PARAM_NAME_DEF),
    create_token_set_(ARGS, LIST_ARGS, SINGLE_ARG),
    create_token_set_(BINARY_EXPR, CALL_EXPR, CLOSURE_EXPR, EXPR,
      INDEX_EXPR, LITERAL_EXPR, NAME_EXPR, PAREN_EXPR,
      PRIMARY_EXPR, TABLE_EXPR, UNARY_EXPR),
    create_token_set_(ASSIGN_STAT, BREAK_STAT, COMPOUND_ASSIGN_STAT, CONTINUE_STAT,
      DO_STAT, EMPTY_STAT, EXPR_STAT, FOR_A_STAT,
      FOR_B_STAT, GOTO_STAT, IF_STAT, LABEL_STAT,
      REPEAT_STAT, RETURN_STAT, WHILE_STAT),
  };

  /* ********************************************************** */
  // (expr ',')* (expr |& ')')
  static boolean arg_expr_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_expr_list")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = arg_expr_list_0(b, l + 1);
    p = r; // pin = 1
    r = r && arg_expr_list_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (expr ',')*
  private static boolean arg_expr_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_expr_list_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arg_expr_list_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arg_expr_list_0", c)) break;
    }
    return true;
  }

  // expr ','
  private static boolean arg_expr_list_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_expr_list_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // expr |& ')'
  private static boolean arg_expr_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_expr_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    if (!r) r = arg_expr_list_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // & ')'
  private static boolean arg_expr_list_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_expr_list_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // listArgs | singleArg {
  // //    stubClass = 'com.tang.intellij.lua.stubs.LuaPlaceholderStub'
  // }
  public static boolean args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ARGS, "<args>");
    r = listArgs(b, l + 1);
    if (!r) r = args_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // singleArg {
  // //    stubClass = 'com.tang.intellij.lua.stubs.LuaPlaceholderStub'
  // }
  private static boolean args_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "args_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = singleArg(b, l + 1);
    r = r && args_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // {
  // //    stubClass = 'com.tang.intellij.lua.stubs.LuaPlaceholderStub'
  // }
  private static boolean args_1_1(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // '='
  public static boolean assignOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignOp")) return false;
    if (!nextTokenIs(b, ASSIGN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN);
    exit_section_(b, m, ASSIGN_OP, r);
    return r;
  }

  /* ********************************************************** */
  // varList '=' exprList
  public static boolean assignStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignStat")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_STAT, "<assign stat>");
    r = varList(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    p = r; // pin = 2
    r = r && exprList(b, l + 1);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    register_hook_(b, RIGHT_BINDER, MY_RIGHT_COMMENT_BINDER);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '<' ID '>'
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    if (!nextTokenIs(b, LT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE, null);
    r = consumeTokens(b, 1, LT, ID, GT);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // binaryOp expr
  public static boolean binaryExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryExpr")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, BINARY_EXPR, "<binary expr>");
    r = binaryOp(b, l + 1);
    p = r; // pin = 1
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '+' | '-' | '*' | '/' | '^' | '%' | '..' |
  //     '<' | '<=' | '>' | '>=' | '==' | '~=' |
  //     'and' | 'or'
  //     // lua5.3
  //     | '|' | '&' | '>>' | '<<' | '~' | '//'
  //     // 非标准符号
  //     | '!=' | '||' | '&&'
  public static boolean binaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, MULT);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, EXP);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, CONCAT);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GE);
    if (!r) r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, NE);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, BIT_OR);
    if (!r) r = consumeToken(b, BIT_AND);
    if (!r) r = consumeToken(b, BIT_RTRT);
    if (!r) r = consumeToken(b, BIT_LTLT);
    if (!r) r = consumeToken(b, BIT_TILDE);
    if (!r) r = consumeToken(b, DOUBLE_DIV);
    if (!r) r = consumeToken(b, NOT_EQ);
    if (!r) r = consumeToken(b, LOGICAL_OR);
    if (!r) r = consumeToken(b, LOGICAL_AND);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // stat_semi*
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
    while (true) {
      int c = current_position_(b);
      if (!stat_semi(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // break
  public static boolean breakStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "breakStat")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, m, BREAK_STAT, r);
    return r;
  }

  /* ********************************************************** */
  // args {
  // }
  public static boolean callExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, CALL_EXPR, "<call expr>");
    r = args(b, l + 1);
    r = r && callExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // {
  // }
  private static boolean callExpr_1(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // ID ('.' | ':') ID
  static boolean checkFuncPrefix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "checkFuncPrefix")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && checkFuncPrefix_1(b, l + 1);
    r = r && consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // '.' | ':'
  private static boolean checkFuncPrefix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "checkFuncPrefix_1")) return false;
    boolean r;
    r = consumeToken(b, DOT);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // 'function' classMethodName funcBody
  public static boolean classMethodDef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodDef")) return false;
    if (!nextTokenIs(b, FUNCTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_METHOD_DEF, null);
    r = consumeToken(b, FUNCTION);
    r = r && classMethodName(b, l + 1);
    p = r; // pin = 2
    r = r && funcBody(b, l + 1);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // nameExpr (funcPrefixRef)* (('.' ID) | (':' ID))
  public static boolean classMethodName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_METHOD_NAME, null);
    r = nameExpr(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, classMethodName_1(b, l + 1));
    r = p && classMethodName_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (funcPrefixRef)*
  private static boolean classMethodName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classMethodName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classMethodName_1", c)) break;
    }
    return true;
  }

  // (funcPrefixRef)
  private static boolean classMethodName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = funcPrefixRef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('.' ID) | (':' ID)
  private static boolean classMethodName_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = classMethodName_2_0(b, l + 1);
    if (!r) r = classMethodName_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '.' ID
  private static boolean classMethodName_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // ':' ID
  private static boolean classMethodName_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classMethodName_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'function' funcBody
  public static boolean closureExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closureExpr")) return false;
    if (!nextTokenIs(b, FUNCTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLOSURE_EXPR, null);
    r = consumeToken(b, FUNCTION);
    p = r; // pin = 1
    r = r && funcBody(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '+=' | '-=' | '*=' | '/=' | '%=' | '^=' | '//=' |
  //     '|=' | '&=' | '<<=' | '>>='
  public static boolean compoundAssignOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compoundAssignOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_ASSIGN_OP, "<compound assign op>");
    r = consumeToken(b, PLUS_ASSIGN);
    if (!r) r = consumeToken(b, MINUS_ASSIGN);
    if (!r) r = consumeToken(b, MULT_ASSIGN);
    if (!r) r = consumeToken(b, DIV_ASSIGN);
    if (!r) r = consumeToken(b, MOD_ASSIGN);
    if (!r) r = consumeToken(b, EXP_ASSIGN);
    if (!r) r = consumeToken(b, DOUBLE_DIV_ASSIGN);
    if (!r) r = consumeToken(b, BIT_OR_ASSIGN);
    if (!r) r = consumeToken(b, BIT_AND_ASSIGN);
    if (!r) r = consumeToken(b, BIT_LTLT_ASSIGN);
    if (!r) r = consumeToken(b, BIT_RTRT_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // varExpr compoundAssignOp expr
  public static boolean compoundAssignStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compoundAssignStat")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_ASSIGN_STAT, "<compound assign stat>");
    r = varExpr(b, l + 1);
    r = r && compoundAssignOp(b, l + 1);
    p = r; // pin = 2
    r = r && expr(b, l + 1);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // continue
  public static boolean continueStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continueStat")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTINUE);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, m, CONTINUE_STAT, r);
    return r;
  }

  /* ********************************************************** */
  // classMethodDef | funcDef | localFuncDef | globalFuncDef | localDef | globalDef
  static boolean defStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defStat")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = classMethodDef(b, l + 1);
    if (!r) r = funcDef(b, l + 1);
    if (!r) r = localFuncDef(b, l + 1);
    if (!r) r = globalFuncDef(b, l + 1);
    if (!r) r = localDef(b, l + 1);
    if (!r) r = globalDef(b, l + 1);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'do' <<lazyBlock>> 'end'
  public static boolean doStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doStat")) return false;
    if (!nextTokenIs(b, DO)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DO_STAT, null);
    r = consumeToken(b, DO);
    p = r; // pin = 1
    r = r && report_error_(b, lazyBlock(b, l + 1));
    r = p && consumeToken(b, END) && r;
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'else' <<lazyBlock>>
  public static boolean elseClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseClause")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_CLAUSE, null);
    r = consumeToken(b, ELSE);
    p = r; // pin = 1
    r = r && lazyBlock(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'elseif' expr 'then' <<lazyBlock>>
  public static boolean elseifClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseifClause")) return false;
    if (!nextTokenIs(b, ELSEIF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSEIF_CLAUSE, null);
    r = consumeToken(b, ELSEIF);
    p = r; // pin = 1
    r = r && report_error_(b, expr(b, l + 1));
    r = p && report_error_(b, consumeToken(b, THEN)) && r;
    r = p && lazyBlock(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ';'
  public static boolean emptyStat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "emptyStat")) return false;
    if (!nextTokenIs(b, SEMI)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMI);
    register_hook_(b, LEFT_BINDER, MY_LEFT_COMMENT_BINDER);
    exit_section_(b, m, EMPTY_STAT, r);
    return r;
  }

  /* ********************************************************** */
  // <<parseExpr>> {
  // }
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, EXPR, "<expr>");
    r = parseExpr(b, l + 1);
    r = r && expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // {
  // }
  private static boolean expr_1(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // expr (',' expr)* {
  // }
  public static boolean exprList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exprList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_LIST, "<expr list>");
    r = expr(b, l + 1);
    r = r && exprList_1(b, l + 1);
    r = r && exprList_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' expr)*
  private static boolean exprList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exprList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!exprList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "exprList_1", c)) break;
    }
    return true;
  }

  // ',' expr
  private static boolean exprList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exprList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // {
  // }
  private static boolean exprList_2(PsiBuilder b, int l) {
    return true;
  }
